[package]
name = "frontend"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
# Yew framework for building the frontend
yew = { version = "0.20", features = ["csr"] }

# For managing state
yewdux = "0.10.0"

# HTTP client for making API requests
reqwest = { version = "0.12.5", features = ["wasm", "json"] }

# For serialization and deserialization of JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For managing the router
yew-router = "0.18.0"

# WebAssembly support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# For WebSockets
web-sys = { version = "0.3", features = ["WebSocket"] }
gloo-net = "0.5.0"

# For local storage
gloo-storage = { version = "0.3.0", features = ["serde-json"] }

# CSS framework integration
twust = "1.0.4"

[dev-dependencies]
# For testing
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[build]
target = "wasm32-unknown-unknown"
